force-app/main/default/objects/Backlog_App__c/Backlog_App__c.object-meta.xml
<CustomObject>
    <label>Backlog App</label>
    <pluralLabel>Backlog Apps</pluralLabel>
    <description>added from sfdx plugin</description>
    <nameField>
        <type>Text</type>
        <label>Name</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>