force-app/main/default/objects/Backlog_App__c/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <label>Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Username and password</fullName>
            </value>
            <value>
                <fullName>Two factor authentication</fullName>
            </value>
            <value>
                <fullName>Single sign-on</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>