force-app/main/default/objects/Backlog_App__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Backlog Apps</relationshipLabel>
    <relationshipName>Backlog_Apps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>