force-app/main/default/objects/Backlog_App__c/fields/Backlog_Session__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog Session</label>
    <referenceTo>Backlog_Session__c</referenceTo>
    <relationshipLabel>Backlog Apps</relationshipLabel>
    <relationshipName>Backlog_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>