force-app/main/default/objects/Backlog_App__c/fields/Business_Value_3_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_3_Impact__c</fullName>
    <label>Business Value 3 Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>