force-app/main/default/objects/Backlog_App__c/fields/Calculations__c.field-meta.xml
<CustomField>
    <fullName>Calculations__c</fullName>
    <label>Calculations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No data based calculations required</fullName>
            </value>
            <value>
                <fullName>Validation rules to improve data quality, automate process management by inter-object calculations</fullName>
            </value>
            <value>
                <fullName>Validation rules based on external systems</fullName>
            </value>
            <value>
                <fullName>Extensive calculations based on historical data, statistical model, predictive sources (i.e. risk management)</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>