force-app/main/default/objects/Backlog_App__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <label>Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Collaboration</fullName>
            </value>
            <value>
                <fullName>Some Collaboration</fullName>
            </value>
            <value>
                <fullName>Heavy Collaboration</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>