force-app/main/default/objects/Backlog_App__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>