force-app/main/default/objects/Backlog_App__c/fields/Data_Volume__c.field-meta.xml
<CustomField>
    <fullName>Data_Volume__c</fullName>
    <label>Data Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low amount of users (100s), stored records (100k) and API calls</fullName>
            </value>
            <value>
                <fullName>Medium amount of users (1k), medium records (1m) and API calls</fullName>
            </value>
            <value>
                <fullName>Medium amount of users with multiple external (1k), medium records (1m) and high interaction with multiple external systems, API calls</fullName>
            </value>
            <value>
                <fullName>Store high volume of records (10m), manage transactional and non-transactional data (like senior information)</fullName>
            </value>
            <value>
                <fullName>Store high volume of records (100m), manage transactional and non-transactional data</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>