force-app/main/default/objects/Backlog_App__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <label>Deleted</label>
    <type>Checkbox</type>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This app is deleted and no longer visible to customers</description>
    <inlineHelpText>This app is deleted and no longer visible to customers</inlineHelpText>
</CustomField>