force-app/main/default/objects/Backlog_App__c/fields/Description__c.field-meta.xml
<CustomField>
    <label>Description</label>
    <type>Text</type>
    <fullName>Description__c</fullName>
    <length>255</length>
    <required>true</required>
    <description>describe the app</description>
    <inlineHelpText>describe the app</inlineHelpText>
</CustomField>