force-app/main/default/objects/Backlog_App__c/fields/Document_Management__c.field-meta.xml
<CustomField>
    <fullName>Document_Management__c</fullName>
    <label>Document Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No unstructured data (documents and files) stored and managed</fullName>
            </value>
            <value>
                <fullName>Simple storage of attachments (PDF, jpg, etc.)</fullName>
            </value>
            <value>
                <fullName>Integration with external DMS systems e.g. Sharepoint</fullName>
            </value>
            <value>
                <fullName>Integration of external systems inlc. logic (PIM, PLM, SCM etc.)</fullName>
            </value>
            <value>
                <fullName>Large filesize, collaborative file creation (authoring), versioning and publication</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>