force-app/main/default/objects/Backlog_App__c/fields/Export_Functionalities__c.field-meta.xml
<CustomField>
    <fullName>Export_Functionalities__c</fullName>
    <label>Export Functionalities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Export Reports in Excel, csv</fullName>
            </value>
            <value>
                <fullName>Export any records (from list view) in Excel, csv</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>