force-app/main/default/objects/Backlog_App__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No integration</fullName>
            </value>
            <value>
                <fullName>Batch integration</fullName>
            </value>
            <value>
                <fullName>Realtime point-to-point or via middleware</fullName>
            </value>
            <value>
                <fullName>Realtime integration with high volume and high frequency, multiple systems, internal and external legacy apps</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>