force-app/main/default/objects/Backlog_App__c/fields/International_Use__c.field-meta.xml
<CustomField>
    <fullName>International_Use__c</fullName>
    <label>International Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No international rollout - single language and single currency</fullName>
            </value>
            <value>
                <fullName>Multiple lang and currency (Low to moderate application function regional differences)</fullName>
            </value>
            <value>
                <fullName>Substantially different UIs for different geographies, multiple currencies</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>