force-app/main/default/objects/Backlog_App__c/fields/Mobile_Use__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Use__c</fullName>
    <label>Mobile Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No mobile users</fullName>
            </value>
            <value>
                <fullName>Employee facing mobile app</fullName>
            </value>
            <value>
                <fullName>Pixel perfect mobile app for internal and external users, offline required</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>