force-app/main/default/objects/Backlog_App__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <label>Number of Users</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-99</fullName>
            </value>
            <value>
                <fullName>100-499</fullName>
            </value>
            <value>
                <fullName>500-000</fullName>
            </value>
            <value>
                <fullName>1000-4999</fullName>
            </value>
            <value>
                <fullName>5000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>