force-app/main/default/objects/Backlog_App__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <label>Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create role based Reports and Dashboards</fullName>
            </value>
            <value>
                <fullName>Create role based Reports and Dashboards across multiple objects</fullName>
            </value>
            <value>
                <fullName>Create role based Reports and Dashboards incl. external data</fullName>
            </value>
            <value>
                <fullName>Create role based Report and Dashboards with flexible dimensions and drill downs</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>