force-app/main/default/objects/Backlog_App__c/fields/Security_and_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Security_and_Sharing__c</fullName>
    <label>Security and Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public access, no need for private access</fullName>
            </value>
            <value>
                <fullName>Private access to records with limited sharing requirements</fullName>
            </value>
            <value>
                <fullName>Flexible sharing with internal and external users, fine granular access, all authenticated access.  Single sign on</fullName>
            </value>
            <value>
                <fullName>Additional encryption at rest required (BYOK)</fullName>
            </value>
            <value>
                <fullName>Highly regulated market, end-to-end encryption required</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>