force-app/main/default/objects/Backlog_App__c/fields/UI_Requirements__c.field-meta.xml
<CustomField>
    <fullName>UI_Requirements__c</fullName>
    <label>UI Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard UI</fullName>
            </value>
            <value>
                <fullName>&quot;Pixel-perfect&quot; design &amp; components</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>