force-app/main/default/objects/Backlog_App__c/fields/Workflows_and_Automation__c.field-meta.xml
<CustomField>
    <fullName>Workflows_and_Automation__c</fullName>
    <label>Workflows and Automation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No automation or workflows</fullName>
            </value>
            <value>
                <fullName>Simple multi step workflows</fullName>
            </value>
            <value>
                <fullName>Complex multi-step orchestrations</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>